RESOLVED FIXED298998
Assertion failure in HTMLMediaElement::isSuspended()
https://bugs.webkit.org/show_bug.cgi?id=298998
Summary Assertion failure in HTMLMediaElement::isSuspended()
Ryosuke Niwa
Reported 2025-09-16 23:11:29 PDT
e.g. 0 WebCore 0x300002ba0 WTFCrashWithInfo(int, char const*, char const*, int) + 100 (Assertions.h:969) 1 WebCore 0x305ea0858 WebCore::HTMLMediaElement::isSuspended() const + 160 (HTMLMediaElement.cpp:8890) 2 WebCore 0x3041f8980 WebCore::PlatformMediaSessionInterface::isSuspended() const + 68 (PlatformMediaSessionInterface.h:179) 3 WebCore 0x306002988 WebCore::MediaElementSession::preferredBufferingPolicy() const + 92 (MediaElementSession.cpp:572) 4 WebCore 0x306001e5c WebCore::MediaElementSession::updateClientDataBuffering() + 128 (MediaElementSession.cpp:384) 5 WebCore 0x306001628 WebCore::MediaElementSession::clientDataBufferingTimerFired() + 260 (MediaElementSession.cpp:364) 6 WebCore 0x30601d0bc WebCore::Timer::Timer<WebCore::MediaElementSession, WebCore::MediaElementSession>(WebCore::MediaElementSession&, void (WebCore::MediaElementSession::*)())::'lambda'()::operator()() const + 204 (Timer.h:175) 7 WebCore 0x30601cebc WTF::Detail::CallableWrapper<WebCore::Timer::Timer<WebCore::MediaElementSession, WebCore::MediaElementSession>(WebCore::MediaElementSession&, void (WebCore::MediaElementSession::*)())::'lambda'(), void>::call() + 32 (Function.h:53) 8 WebCore 0x300038b2c WTF::Function<void ()>::operator()() const + 184 (Function.h:82) 9 WebCore 0x300194aa0 WebCore::Timer::fired() + 32 (Timer.h:208) 10 WebCore 0x306f3a888 WebCore::ThreadTimers::sharedTimerFiredInternal() + 772 (ThreadTimers.cpp:133) 11 WebCore 0x306f447f4 WebCore::ThreadTimers::setSharedTimer(WebCore::SharedTimer*)::$_0::operator()() const + 32 (ThreadTimers.cpp:73) 12 WebCore 0x306f44798 WTF::Detail::CallableWrapper<WebCore::ThreadTimers::setSharedTimer(WebCore::SharedTimer*)::$_0, void>::call() + 32 (Function.h:53) 13 WebCore 0x300038b2c WTF::Function<void ()>::operator()() const + 184 (Function.h:82) 14 WebCore 0x306ec7c18 WebCore::MainThreadSharedTimer::fired() + 152 (MainThreadSharedTimer.cpp:85)
Attachments
Ryosuke Niwa
Comment 1 2025-09-16 23:17:48 PDT
EWS
Comment 2 2025-09-16 23:42:17 PDT
Committed 300070@main (598af3159ad4): <https://commits.webkit.org/300070@main> Reviewed commits have been landed. Closing PR #50842 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2025-09-16 23:45:08 PDT
Alexey Proskuryakov
Comment 4 2025-09-17 11:40:29 PDT
*** Bug 298990 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.