Assertion failure in HTMLMediaElement::isSuspended() https://bugs.webkit.org/show_bug.cgi?id=298998

Reviewed by Chris Dumez.

The assertion failure was caused because this function was getting called between the time when
active DOM objects are stopped in Document::commonTeardown and when the document is destroyed.

Fixed the assertion by allowing this specific situation.

Test: http/tests/lockdown-mode/media-element-is-suspended-crash.html

* LayoutTests/http/tests/lockdown-mode/media-element-is-suspended-crash-expected.txt: Added.
* LayoutTests/http/tests/lockdown-mode/media-element-is-suspended-crash.html: Added.
* Source/WebCore/html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::isSuspended const):

Canonical link: https://commits.webkit.org/300070@main